# coinflip

./: CMakeLists.txt  LICENSE  LevelData.json  README.md  app_icon.rc  chooselevelscene.cpp  chooselevelscene.h  crtbutton.cpp  crtbutton.h  crtcoin.cpp  crtcoin.h  crteffect.cpp  crteffect.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  playscene.cpp  playscene.h  res.qrc  videowidget.cpp  videowidget.h  winscene.cpp  winscene.h
